# asset-tracking-firmware

./: .gitignore  Dockerfile  Makefile  README.md  vscode.code-workspace
.west/: config
apps/: west.yml
apps/asset-tag/: CMakeLists.txt  overlay-debug.conf  prj.conf
apps/asset-tag/include/: app_battery.hpp  app_ble.hpp  app_exception.hpp  app_gpio.hpp  app_lfs.hpp  app_log.hpp  app_saadc.hpp  app_smp.hpp  app_system_off.hpp
apps/asset-tag/include/app/: ass.hpp  measure.hpp  timer.hpp  version.hpp  work.hpp
apps/asset-tag/lib/: greetings.h
apps/asset-tag/src/: fatal.c  main.cpp  sheap-rs.ld
